--- a/jlblanco2010geometry3D_techrep.tex
+++ b/jlblanco2010geometry3D_techrep.tex
@@ -3900,6 +3900,14 @@ Then, the Jacobian of interest can be obtained by chaining Eq.~\ref{eq:jacob.AeD
 \end{eqnarray}
 
 
+% -------------
+
+\subsection{Jacobian of $((P_2 \oplus e^{\varepsilon 2}) \ominus (P_2 \oplus e^{\varepsilon 2})) \ominus D$}
+
+
+Write me!
+
+
 
 \appendix
 
@@ -4120,6 +4128,15 @@ we arrive at:
 \end{eqnarray}
 
 \noindent with this last term given by Eq.~(\ref{eq:jacob_p_min_eD_e}).
+
+
+% --------------------
+
+\chapter{Simpler SE(2) expressions}
+\label{ch:apx:se2}
+
+Write me!
+
 
 
 %% ---------------------------------------------------------------
